<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.androidapp.watchme.activity.SignupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:textColor="@color/colorWhite"
            android:textSize="45sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textColor="@color/colorWhite"
            android:textSize="45sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/nameEditText"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/name"
        android:textStyle="italic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/emailEditText"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:textStyle="italic"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/passwordEditText"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:textStyle="italic"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlack"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signupBtn"
        android:background="@drawable/button_background"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorBlack"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginTextView"
        android:textColor="@color/colorWhite"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

</LinearLayout>
