<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.androidapp.watchme.activity.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backTextView"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveTextView"
            android:layout_alignParentRight="true"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/nameEditText"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/emailTextView"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetPasswordTextView"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:layout_marginRight="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buddyLayout"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buddy_recipient"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assign_buddy_desc"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/buddyEditText"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

</LinearLayout>
