<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androidapp.watchme.activity.AdminActivity">


    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deviceSet_txt"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/setup_device"
            android:textColor="#ffffff"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
           android:layout_marginTop="10dp"
            android:background="#ffffff"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc_txt"
            android:textSize="13sp"
            android:textColor="#ffffff"
            android:text="@string/active"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc1_txt"
            android:textSize="13sp"
            android:textColor="#ffffff"
            android:text="@string/active2"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/Enable_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:text="@string/Enable"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

</LinearLayout>
